feat: enable Basic var and List var to coexist for the local search (#1606)
This PR completes the feature and enables the mixed model for local search.