@@ -1,7 +1,6 @@
 package ai.timefold.solver.core.impl.heuristic.selector.move.composite;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import ai.timefold.solver.core.config.heuristic.selector.common.SelectionCacheType;
 import ai.timefold.solver.core.config.heuristic.selector.common.SelectionOrder;
@@ -14,7 +13,7 @@ import ai.timefold.solver.core.impl.heuristic.selector.move.MoveSelectorFactory;
 abstract class AbstractCompositeMoveSelectorFactory<Solution_, MoveSelectorConfig_ extends MoveSelectorConfig<MoveSelectorConfig_>>
         extends AbstractMoveSelectorFactory<Solution_, MoveSelectorConfig_> {
 
-    public AbstractCompositeMoveSelectorFactory(MoveSelectorConfig_ moveSelectorConfig) {
+    protected AbstractCompositeMoveSelectorFactory(MoveSelectorConfig_ moveSelectorConfig) {
         super(moveSelectorConfig);
     }
 
@@ -24,8 +23,8 @@ abstract class AbstractCompositeMoveSelectorFactory<Solution_, MoveSelectorConfi
                 .map(moveSelectorConfig -> {
                     AbstractMoveSelectorFactory<Solution_, ?> moveSelectorFactory =
                             MoveSelectorFactory.create(moveSelectorConfig);
-                    SelectionOrder selectionOrder = SelectionOrder.fromRandomSelectionBoolean(randomSelection);
+                    var selectionOrder = SelectionOrder.fromRandomSelectionBoolean(randomSelection);
                     return moveSelectorFactory.buildMoveSelector(configPolicy, minimumCacheType, selectionOrder, false);
-                }).collect(Collectors.toList());
+                }).toList();
     }
 }
